# dc4_llama_index

./: README.md  pyproject.toml
src/datacloud/readers/: query_svc.py
src/main/: __init__.py  datacloud_data_loader.py
