[project]
name = "dc_llama_index"
version = "0.1.0"
description = "Salesforce Data Cloud Data Loader for Llama Index"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Makarand Bhonsle" }]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.7.3",
    "python-dotenv>=1.0.0",
    "llama-index>=0.13.0",
    "pydc-auth>=0.1.3"
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Operating System :: OS Independent",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/mbhonsle/dc4_llama_index"
Issues = "https://github.com/mbhonsle/dc4_llama_index/issues"